# openpad

./: .gitignore  Architecture.md  Cargo.toml  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_SUMMARY.md  README.md  SDK.md  Splash.md  TERMINAL_IMPLEMENTATION_SUMMARY.md  VISUAL_GUIDE.md  fix_terminal.py  full_terminal_content.rs  justfile  openapi.json  roadmap.md
.github/: copilot-instructions.md
.github/workflows/: macos-release.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/: PASTE_FEATURE.md  THEME_GUIDE.md  diff-view-enhancement.md  multi-project-implementation-summary.md  multi-project-testing-guide.md  terminal-feature.md  terminal-ui-layout.txt  terminal-visual-example.md
docs/adr/: 0001-ui-runtime-refactor.md
docs/plans/: 2026-01-29-openpad-mvp-design.md  2026-01-29-openpad-mvp-implementation.md  2026-01-29-session-list-implementation.md  2026-01-29-session-list-redesign.md  2026-02-01-inline-diff-and-activity-indicators-design.md  2026-02-01-inline-diff-and-activity-indicators-implementation.md  2026-02-17-openpad-widgets-refactor-design.md  2026-02-17-openpad-widgets-refactor.md
openpad-app/: Cargo.toml
openpad-app/packaging/: Info.plist
openpad-app/src/: actions.rs  app.rs  constants.rs  event_handlers.rs  lib.rs  main.rs  network.rs  theme.rs  ui_state.rs  utils.rs
openpad-app/src/app/: action_dispatch.rs  composer.rs  dock_controller.rs  lifecycle.rs  sidebar.rs  ui_sync.rs
openpad-app/src/async_runtime/: mod.rs  tasks.rs
openpad-app/src/components/: app_bg.rs  assistant_bubble.rs  colored_diff_text.rs  diff_view.rs  editor_panel.rs  files_panel.rs  message_list.rs  mod.rs  permission_card.rs  permission_dialog.rs  projects_panel.rs  run_command_dialog.rs  session_context_menu.rs  session_options_popup.rs  sessions_panel.rs  settings_dialog.rs  sidebar_header.rs  simple_dialog.rs  terminal.rs  terminal_panel.rs  user_bubble.rs
openpad-app/src/state/: actions.rs  effect_executor.rs  effects.rs  handlers.rs  mod.rs  reducer.rs
openpad-app/src/ui/: formatters.rs  mod.rs  state_updates.rs
openpad-app/src/utils/: mod.rs  path_utils.rs  run_command_store.rs
openpad-protocol/: Cargo.toml  README.md
openpad-protocol/examples/: basic_usage.rs  file_operations.rs
openpad-protocol/src/: client.rs  error.rs  lib.rs  types.rs
openpad-widgets/: Cargo.toml
openpad-widgets/src/: app_bg.rs  assistant_bubble.rs  colored_diff_text.rs  diff_view.rs  hamburger_button.rs  header_bar.rs  input_bar.rs  input_field.rs  lib.rs  message_list.rs  message_logic.rs  openpad.rs  permission_card.rs  permission_dialog.rs  scrollable_popup_menu.rs  send_button.rs  session_tree.rs  settings_dialog.rs  side_panel.rs  simple_dialog.rs  status_dot.rs  terminal.rs  terminal_panel.rs  theme.rs  upward_dropdown.rs  user_bubble.rs
openpad-widgets/src/message_list/: api.rs  events.rs  mod.rs  model.rs  render.rs
openpad-widgets/src/utils/: formatters.rs
