[workspace]
members = ["openpad-app", "openpad-protocol", "openpad-widgets"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# makepad-widgets = { path = "/Users/wheregmis/Documents/GitHub/makepad/widgets" }
# makepad-code-editor = { path = "/Users/wheregmis/Documents/GitHub/makepad/code_editor" }
# makepad-studio = { path = "/Users/wheregmis/Documents/GitHub/makepad/studio" }

makepad-widgets = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
makepad-code-editor = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
makepad-studio = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
