[package]
name = "openpad-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openpad"
path = "src/main.rs"

[dependencies]
makepad-widgets = "1.0.0"
openpad-widgets = { path = "../openpad-widgets" }
openpad-protocol = { path = "../openpad-protocol" }
tokio = { workspace = true }
chrono = "0.4"
