[package]
name = "openpad-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openpad"
path = "src/main.rs"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
openpad-widgets = { path = "../openpad-widgets" }
openpad-protocol = { path = "../openpad-protocol" }
tokio = { workspace = true }
portable-pty = "0.9.0"
hostname = "0.4"
regex = "1"