[package]
name = "openpad-app"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "openpad"
path = "src/main.rs"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
openpad-widgets = { path = "../openpad-widgets" }
openpad-protocol = { path = "../openpad-protocol" }
tokio = { workspace = true }
portable-pty = "0.9.0"
hostname = "0.4"
regex = "1"
base64 = "0.22"

[package.metadata.packager]
product_name = "Openpad"
identifier = "io.openpad.app"
authors = ["Openpad Contributors"]
description = "Openpad is a Makepad-powered personal note that blends text, widgets, and tools."
long_description = """
Openpad pairs Makepad's declarative UI with custom widgets to craft a literate
workspace. It is built in Rust, ships with platform resources, and runs everywhere
desktop Makepad supports.
"""
out_dir = "./dist"
before-packaging-command = """
set -euo pipefail
robius-packaging-commands before-packaging \
    --force-makepad \
    --binary-name openpad \
    --path-to-binary ./target/release/openpad
mkdir -p ./dist/resources/openpad-app
cp -R ./openpad-app/resources/. ./dist/resources/openpad-app || true
"""
before-each-package-command = """
set -euo pipefail
robius-packaging-commands before-each-package \
    --force-makepad \
    --binary-name openpad \
    --path-to-binary ./target/release/openpad
mkdir -p ./dist/resources/openpad-app
cp -R ./openpad-app/resources/. ./dist/resources/openpad-app || true
"""
resources = [
    { src = "./dist/resources/makepad_widgets", target = "makepad_widgets" },
    { src = "./dist/resources/makepad_fonts_chinese_bold", target = "makepad_fonts_chinese_bold" },
    { src = "./dist/resources/makepad_fonts_chinese_bold_2", target = "makepad_fonts_chinese_bold_2" },
    { src = "./dist/resources/makepad_fonts_chinese_regular", target = "makepad_fonts_chinese_regular" },
    { src = "./dist/resources/makepad_fonts_chinese_regular_2", target = "makepad_fonts_chinese_regular_2" },
    { src = "./dist/resources/makepad_fonts_emoji", target = "makepad_fonts_emoji" },
    { src = "./dist/resources/openpad-app", target = "openpad-app" },
]

[package.metadata.packager.macos]
minimum_system_version = "11.0"
info_plist_path = "./openpad-app/packaging/Info.plist"
